<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_card"
    android:id="@+id/item_load_shape"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:orientation="vertical">

    <View
        android:id="@+id/view2"
        android:layout_width="40dp"
        android:layout_height="5dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_line"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/result"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_rumus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/formula"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/vVal1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/var"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/amount"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_cara1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_ops1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/vVal2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/var"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/amount"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_cara2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ll_ops2">
        <TextView
            android:id="@+id/vVal3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/var"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/amount"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_ops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ll_ops3">

        <TextView
            android:id="@+id/vVal4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/var"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/amount"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_cara3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/resultSentence"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_hasil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/resultCount"
                android:textSize="24sp"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text=" cm"
                android:textSize="24sp"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"/>
        </LinearLayout>

    <RelativeLayout
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_share_load"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:elevation="0dp"
            android:scaleType="centerInside"
            android:background="@drawable/btn_gradient"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/btn_count_load"
            android:src="@drawable/btn_share2" />

        <Button
            android:id="@+id/btn_count_load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/btn_black"
            android:layout_alignParentEnd="true"
            android:elevation="0dp"
            android:text="@string/back"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>