<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/item_pre_shape"
    android:background="@drawable/bg_card">

    <View
        android:id="@+id/view2"
        android:layout_width="40dp"
        android:layout_height="5dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fillViewport="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/loadSentence1"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view2" />
                <TextView
                    android:id="@+id/tv_kondisi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/unknown"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view2" />
                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/loadSentence2"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view2" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/formula"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/loadSentence3"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="4dp"
                android:layout_marginStart="8dp"
                android:text="@string/loadSentence4"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_marginTop="4dp"
                android:id="@+id/ll_val1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_val1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:text="@string/var"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:text="@string/amount"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_val1"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:paddingVertical="2dp"
                    android:background="@drawable/bg_edittext"
                    android:inputType="number"
                    android:maxLength="5"
                    android:imeOptions="actionDone"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_val2"
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_val2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:text="@string/var"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:text="@string/amount"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_val2"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:paddingVertical="2dp"
                    android:background="@drawable/bg_edittext"
                    android:inputType="number"
                    android:maxLength="5"
                    android:imeOptions="actionDone"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="4dp"
                android:id="@+id/ll_val3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_val3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:text="@string/var"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:text="@string/amount"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_val3"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingVertical="2dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/bg_edittext"
                    android:inputType="number"
                    android:maxLength="5"
                    android:imeOptions="actionDone"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_val4"
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_val4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:text="@string/var"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:text="@string/amount"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_val4"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:paddingVertical="2dp"
                    android:background="@drawable/bg_edittext"
                    android:inputType="number"
                    android:maxLength="5"
                    android:imeOptions="actionDone"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/btn_share_load"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_share"
        android:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_count"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_gradient"
        android:elevation="0dp"
        android:text="@string/resultButton"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_share_load" />
</androidx.constraintlayout.widget.ConstraintLayout>